--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
+/.idea
 /vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
+composer.phar
+composer.lock
+.DS_Store
 .phpunit.result.cache
