Fix psr-4 autoloading standard

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "NomisCZ\\Breadcrumbs\\ServiceProvider"
+              "NomisCZ\\Breadcrumbs\\BreadcrumbsServiceProvider"
             ],
             "aliases": {
                 "Breadcrumbs": "NomisCZ\\Breadcrumbs\\Facade"
